Mon Jul 31 19:05:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updates to the Perl and Python test scripts, and an extra
	  Makefile dependency.

Mon Jul 31 15:41:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixes and updates to the SWIG bindings.  Perl5 has done its
	  first actual query (using an inmemory database).

Fri Jul 21 14:37:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A couple of tweaks for Solaris.

Fri Jul 21 12:26:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a reported memory leak in apitest on Solaris

	* Extra debugging facilities for finding memory allocation problems
	  in testsuite programs.
	  If OM_NEW_TRAP is set in the environment with a hex value, then
	  global operator new() will abort() when that address is allocated.
	  If OM_NEW_TRAP_COUNT is set to a number n, then only abort on the
	  nth allocation returning the above address.

Thu Jul 20 19:08:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Progress on the apitest-to-Java script and support stuff.  A
	  few helper functions need adding, but about half of the test
	  functions translate ok.

Thu Jul 20 16:39:00 BST 2000 Olly Betts

	* Tweaks to doxygen makefile stuff.

Thu Jul 20 15:56:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In DEBUGCALL, make sure that "this" is displayed as a pointer,
	  not as the description of an API object.

Thu Jul 20 15:03:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More work on omstringstream, now understands char *, std::endl and
	  std::flush and a few new types.

	* Make omlocks include stdio.h

Thu Jul 20 13:01:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest.pl now has new options:

	  --no-random avoids running the tests with randomly generated junk

	  languages can be specified on the command line to only run tests
	  on one (or more) specified language.
